[package]
name = "sdsl-rs"
version = "0.1.0"
authors = ["rndhouse <rndhouse@protonmail.com>"]
edition = "2018"

[lib]
name = "sdsl"

[dependencies]
anyhow = "1.0.40"

log = "0.4.8"
simple_logger = "1.11.0"

maplit = "1.0.2"
blake3 = "0.3.7"
bincode = "1.3.3"
serde = { version = "1.0.104", features = ["derive"] }

regex = "1.4.6"

walkdir = "2.3.2"
zip = "0.5.10"
fs_extra = "1.2.0"

cmake = "0.1.45"
