[package]
name = "sdsl"
version = "0.1.4"
authors = ["rndhouse <rndhouse@protonmail.com>"]
edition = "2018"
repository = "https://github.com/sdsl-rs/sdsl-rs"
documentation = "https://docs.rs/crate/sdsl"
license = "MIT"
description = "A Rust interface for the Succinct Data Structure Library."
include = [
    "**/*.rs",
    "**/*.toml",
    "**/*.md",
    "**/*.zip",
    "**/*.html",
]

[lib]
name = "sdsl"

[dependencies]
anyhow = "1.0.40"

log = "0.4.8"
simple_logger = "1.11.0"

maplit = "1.0.2"
blake3 = "0.3.7"
bincode = "1.3.3"
serde = { version = "1.0.104", features = ["derive"] }

regex = "1.4.6"
lazy_static = "1.4.0"

walkdir = "2.3.2"
zip = "0.5.10"
fs_extra = "1.2.0"

cmake = "0.1.45"
sharedlib = "7.0.0"
libc = "0.2.94"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]